# emo_bot

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  README.md  README.ru.md  pyproject.toml  server.py  test_server.py
.github/workflows/: publish.yml  test.yml
config/: patterns.toml
docs/: integration_guide.md  integration_guide.ru.md
nlp_service/: Dockerfile  app.py  requirements.txt
prompts/: support_bot_flow.mmd  support_bot_flow.ru.mmd  support_bot_system_prompt.md  support_bot_system_prompt_en.md
src/: models.py  pattern_config.py  pattern_detector.py  server.py  strategy_rules.py
src/nlp/: __init__.py  clients.py  config.py  spacy_singleton.py
src/tools/: strategy_suggest.py
tests/: test_integration.py  test_nlp.py  test_nlp_client.py  test_pattern_detector.py  test_strategy_rules.py
