[project]
name = "emotional-deescalation-mcp"
version = "0.2.0"
description = "Universal MCP server for emotional tone analysis and de-escalation in communications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ilyajob05" },
]
keywords = ["mcp", "chatbot", "de-escalation", "emotional-analysis", "customer-support"]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
emotional-deescalation-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
