[project]
name = "emotional-deescalation-mcp"
version = "0.4.3"
description = "MCP server for emotional analysis, de-escalation, and strategic dialogue management in customer support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ilyajob05" },
]
keywords = ["mcp", "chatbot", "de-escalation", "emotional-analysis", "customer-support", "dialogue-strategy", "nlp", "spacy"]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "spacy>=3.8.11",
]

[project.optional-dependencies]
nlp = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
emotional-deescalation-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["nlp_service", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
